sources/devops/k8s/overlays/production-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-construct
  namespace: construct
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - construct.example.com
      secretName: construct-example-tls
  rules:
    - host: construct.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-construct
                port:
                  number: 80
